src/objects/AuthoredProducts__c.object
<CustomObject>
    <description>CORE - Authored Products object so that contacts can be related to products that the contact Authored</description>
    <fields>
        <fullName>Author__c</fullName>
        <description>Field to pull in the Author of the Product</description>
        <formula>Product__r.Author__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Field provided so that user can record additional information regarding the authoring of the product</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>CORE - contact lookup</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Authored_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Copyright_Year__c</fullName>
        <description>Formula to populate Copyright year from the associated Product</description>
        <formula>Product__r.Copyright_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copyright Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <description>CORE - discipline of Authored Product</description>
        <label>Discipline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Edition_Product__c</fullName>
        <description>Formula populated from the associated product</description>
        <formula>Product__r.Edition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <description>CORE - edition of Authored Product</description>
        <label>Edition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Publisher__c</fullName>
        <description>CORE - Other publisher of Authored Product</description>
        <label>Other Publisher</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CORE - Product that contact has authored</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Market__c</field>
                <operation>equals</operation>
                <valueField>$User.Market__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product2.Line_of_Business__c</field>
                <operation>equals</operation>
                <valueField>$User.Line_of_Business__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product2.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>$User.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Relationships</relationshipLabel>
        <relationshipName>Authored_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publisher_Product__c</fullName>
        <description>Formula to pull the publisher from the associated product</description>
        <formula>Product__r.Publisher__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publisher</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <description>CORE - Publisher of Authored Product</description>
        <label>Publisher</label>
        <picklist>
            <picklistValues>
                <fullName>Pearson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wiley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McGraw-Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cengage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palgrave Macmillan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxford University Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elsevier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lipincott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>The relationship defines the association between the product and Pearson</description>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Pearson Author</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Author</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty Advisory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Product__c</fullName>
        <description>Formula to pull through title from the associated product</description>
        <formula>Product__r.Full_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>CORE - Title of Authored product</description>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <label>Product Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Authored Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Other_Publisher</fullName>
        <active>true</active>
        <description>CORE - Other Publisher required when Other is chosen in Publisher picklist</description>
        <errorConditionFormula>ISBLANK( Other_Publisher__c )
&amp;&amp;
 ISPICKVAL( Publisher__c , &quot;Other&quot;)</errorConditionFormula>
        <errorDisplayField>Other_Publisher__c</errorDisplayField>
        <errorMessage>You must enter the other publisher.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Publisher_Required</fullName>
        <active>false</active>
        <description>CORE - Publisher picklist is a required field</description>
        <errorConditionFormula>ISPICKVAL( Publisher__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Publisher__c</errorDisplayField>
        <errorMessage>You must choose a Publisher</errorMessage>
    </validationRules>
</CustomObject>